# fastbot

./: .env.template  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
fastbot/: config.py  main.py  whatsapp.py
fastbot/whatsapp/: _webhook.py  router.py  utils.py
scripts/: generate_longlived_access_token.py  send_whatsapp_message.py
templates/: index.html
