[tool.poetry]
name = "fastbot"
version = "0.1.0"
description = ""
authors = ["Asapanna Rakesh <rakeshark22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
